add: books menu and datatables

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,5 +6,9 @@
 }
 
 .bg-logo{
-        background-color: #5979a2;
+    background-color: #5979a2;
+}
+
+.bg-side-bar{
+    background-color: #0F425C;
 }
